# neural-retrieval-engine

./: .gitignore  Makefile  README.md  pyproject.toml
data/index/: fiqa-mini.doc_ids.npy  fiqa-mini.manifest.json
data/proc/fiqa-mini/: qrels.tsv  queries.jsonl
data/raw/: toy-qrels.jsonl  toy-queries.jsonl  toy.jsonl
data/raw/fiqa/: queries.jsonl
data/raw/fiqa/qrels/: test.tsv
results/: bm25_toy_run.json  dense_toy_metrics.json  dense_toy_run.json  fiqa_faiss_report.json  fiqa_faiss_run.json  fiqa_hybrid_sweep.json  fiqa_mini_bm25_metrics.json  fiqa_mini_bm25_run.json  fiqa_mini_dense_metrics.json  fiqa_mini_dense_run.json  fusion_grid_results.json
scripts/: bm25_toy.py  cli.py  dense_toy.py  download_fiqa.py  fiqa_faiss_build.py  fiqa_faiss_search.py  fiqa_hybrid_sweep.py  fiqa_mini_bm25.py  fiqa_mini_dense.py  fuse_grid.py  plot_ablation.py  serve_api.py
src/willrec/: io.py  utils.py
src/willrec/dense/: encoder.py  index_faiss.py  simple_dense.py
src/willrec/eval/: metrics.py
src/willrec/hybrid/: fuse.py
src/willrec/server/: api.py  demo_app.py
src/willrec/sparse/: bm25.py
tests/: test_bm25_toy.py  test_dense_toy.py  test_metrics.py
